Code clean up, depreciation solved, netty debug logs hidden